--- a/Clima-Tempo/Content/Site.css
+++ b/Clima-Tempo/Content/Site.css
@@ -17,8 +17,38 @@
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
-input,
+/*input,
 select,
 textarea {
     max-width: 280px;
+}*/
+
+
+
+.starter-template {
+    padding: 3rem 1.5rem;
+    text-align: center;
 }
+
+.panel-lightgray {
+    border-color: #ddd;
+}
+
+    .panel-lightgray > .panel-heading {
+        color: #333333;
+        background-color: lightgray;
+        border-color: #ddd;
+    }
+
+        .panel-lightgray > .panel-heading + .panel-collapse > .panel-body {
+            border-top-color: #ddd;
+        }
+
+        .panel-lightgray > .panel-heading .badge {
+            color: #f5f5f5;
+            background-color: lightgray;
+        }
+
+    .panel-lightgray > .panel-footer + .panel-collapse > .panel-body {
+        border-bottom-color: #ddd;
+    }
